--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["font", "db", "css"]
 log = "0.4"
 memmap2 = "0.1"
 ttf-parser = "0.6.1"
-uuid = { version = "0.8", features = ["v4"] }
+uuid = { git = "https://github.com/uuid-rs/uuid", rev = "9bb93b6", features = ["v4"] }
 
 [dev-dependencies]
 env_logger = { version = "0.7", default-features = false }
