--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,13 @@ categories = ["text-processing"]
 
 [dependencies]
 log = "0.4"
-memmap2 = "0.1"
+memmap2 = { version = "0.1", optional = true }
 ttf-parser = { git = "https://github.com/RazrFalcon/ttf-parser", rev = "df046dd" }
 uuid = { git = "https://github.com/uuid-rs/uuid", rev = "9bb93b6", features = ["v4"] }
 
 [dev-dependencies]
 env_logger = { version = "0.7", default-features = false }
+
+[features]
+default = ["fs"]
+fs = ["memmap2"] # allows local filesystem interactions
