Separate fs and memmap features
On some targets such as wasm32-wasi, memmap2 is not supported but fs
works fine. This commit separates memmap use from the fs feature into a
new memmap feature and adds a fallback for non-memmap fs builds.

This allows fontdb to be used with fs support on wasm32-wasi targets.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ ttf-parser = "0.12.1"
 env_logger = { version = "0.8", default-features = false }
 
 [features]
-default = ["fs"]
-fs = ["memmap2"] # allows local filesystem interactions
+default = ["fs", "memmap"]
+fs = [] # allows local filesystem interactions
+memmap = ["fs", "memmap2"] # allows font files memory mapping, greatly improves performance
