--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,14 @@ log = "0.4"
 memmap2 = { version = "0.5", optional = true }
 ttf-parser = "0.12.1"
 
+[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
+fontconfig-parser = { version = "0.5", optional = true }
+
 [dev-dependencies]
 env_logger = { version = "0.8", default-features = false }
 
 [features]
 default = ["fs", "memmap"]
+fontconfig = ["fontconfig-parser", "fs"]
 fs = [] # allows local filesystem interactions
 memmap = ["fs", "memmap2"] # allows font files memory mapping, greatly improves performance
