--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ memmap2 = { version = "0.5", optional = true }
 ttf-parser = "0.12.1"
 
 [target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
-fontconfig-parser = { version = "0.5", optional = true }
+fontconfig-parser = { version = "0.5", optional = true, default-features = false }
 
 [dev-dependencies]
 env_logger = { version = "0.8", default-features = false }
