--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ fontconfig-parser = { version = "0.5", optional = true, default-features = false
 
 [dev-dependencies]
 env_logger = { version = "0.9", default-features = false }
+test-case = "2.2.2"
 
 [features]
 default = ["fs", "memmap", "std"]
