--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ features = ["opentype-layout", "apple-layout", "variable-fonts", "glyph-names"]
 fontconfig-parser = { version = "0.5", optional = true, default-features = false }
 
 [dev-dependencies]
-env_logger = { version = "0.10", default-features = false }
+env_logger = { version = "0.9", default-features = false } # 0.10 requires Rust 1.60+
 
 [features]
 default = ["fs", "memmap", "std"]
