--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["text-processing"]
 [dependencies]
 log = "0.4"
 memmap2 = { version = "0.5", optional = true }
+slab = { version = "0.4.7", default-features = false }
 
 [dependencies.ttf-parser]
 version = "0.18"
