Use SlotMap instead of Vec internally.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,12 @@ repository = "https://github.com/RazrFalcon/fontdb"
 license = "MIT"
 keywords = ["font", "db", "css", "truetype", "ttf"]
 categories = ["text-processing"]
+rust-version = "1.49"
 
 [dependencies]
 log = "0.4"
 memmap2 = { version = "0.5", optional = true }
+slotmap = { version = "1.0.6", default-features = false }
 
 [dependencies.ttf-parser]
 version = "0.18"
