--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fontdb"
-version = "0.12.0"
-authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
+version = "0.13.0"
+authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
 edition = "2018"
 description = "A simple, in-memory font database with CSS-like queries."
 documentation = "https://docs.rs/fontdb/"
