--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tinyvec = { version = "1.6.0", features = ["alloc"] }
 
 [dependencies.ttf-parser]
 version = "0.20"
+path = "../ttf-parser"
 default-features = false
 features = ["opentype-layout", "apple-layout", "variable-fonts", "glyph-names"]
 
@@ -32,7 +33,7 @@ env_logger = { version = "0.10", default-features = false }
 
 [features]
 default = ["std", "fs", "memmap", "fontconfig"]
-std = ["ttf-parser/std"]
+std = ["ttf-parser/std", "serde?/std"]
 # Allows local filesystem interactions.
 fs = ["std"]
 # Allows font files memory mapping, greatly improves performance.
