Link to PR of ttf-parser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tinyvec = { version = "1.6.0", features = ["alloc"] }
 
 [dependencies.ttf-parser]
 version = "0.20"
+git = "https://github.com/StratusFearMe21/ttf-parser"
 default-features = false
 features = ["opentype-layout", "apple-layout", "variable-fonts", "glyph-names"]
 
