--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fontdb"
-version = "0.19.0"
+version = "0.20.0"
 authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
 edition = "2018"
 description = "A simple, in-memory font database with CSS-like queries."
@@ -19,9 +19,9 @@ slotmap = { version = "1.0.6", default-features = false }
 tinyvec = { version = "1.6.0", features = ["alloc"] }
 
 [dependencies.ttf-parser]
-version = "0.23"
+version = "0.24"
 default-features = false
-features = ["opentype-layout", "apple-layout", "variable-fonts", "glyph-names"]
+features = ["opentype-layout", "apple-layout", "variable-fonts", "glyph-names", "no-std-float"]
 
 [target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
 fontconfig-parser = { version = "0.5", optional = true, default-features = false }
